# Astar-Island-Competition-

./: .env.example  .gitignore  AGENTS.md  DISCUS.md  GAME_RULES.md  HISTORY.md  README.md  pyproject.toml  summarize_runs.py
astar_island/: __init__.py  api.py  cache.py  cli.py  config.py  gbdt.py  learned.py  predict.py  terrain.py  tiling.py
models/: catboost_v4_mixer1.joblib  catboost_v4_mixer1_report.json  gbdt_live_selection_report.json  gbdt_prior_stable_backup_20260322T031440Z.joblib  gbdt_prior_stable_backup_20260322T031440Z_report.json  gbdt_v3_retrain2_report.json  sklearn_v4_mixer1.joblib  sklearn_v4_mixer1_report.json  sklearn_v4_tuned1.joblib  sklearn_v4_tuned1_report.json
scripts/: at_round17_caffeinate.job  at_round17_deadline.job  at_round17_train.job  deadline_submit.py  round_submit_common.py  train_v3_candidate_then_submit.py
tests/: test_gbdt.py  test_learned.py  test_predict.py  test_terrain.py  test_tiling.py
