[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "astar-island-mvp"
version = "0.1.0"
description = "Inference, training, and submission tooling for the Astar Island challenge"
requires-python = ">=3.11"
dependencies = [
    "joblib",
    "numpy",
    "scikit-learn",
]

[project.optional-dependencies]
train = [
    "optuna",
    "lightgbm",
    "xgboost",
    "catboost",
]
